# speace-prototipo

./: .gitignore  README.md  SPEACE-TASKS-ACTIVE.md  pyproject.toml  requirements.txt  run_speace.bat  run_speace.sh  state.json
.claude/: settings.local.json
cortex/brain/: __init__.py  _tests_abstraction_layer.py  _tests_causal_reasoning.py  _tests_recursive_self_improvement.py  _tests_self_model.py  abstraction_layer.py  causal_reasoning.py  recursive_self_improvement.py  self_model.py
cortex/cognitive_autonomy/consolidation/: __init__.py  consolidation_pass.py
cortex/cognitive_autonomy/criticality/: __init__.py  criticality_controller.py
cortex/cognitive_autonomy/energy/: __init__.py  budget.py  scheduler.py  sleep_wake.py
cortex/cognitive_autonomy/glial/: __init__.py  glial_support.py
cortex/cognitive_autonomy/immune/: __init__.py  cognitive_immune.py
cortex/cognitive_autonomy/integration/: _tests_agi_loop.py  agi_loop.py
cortex/cognitive_autonomy/metabolic/: __init__.py  metabolic_switch.py
cortex/cognitive_autonomy/neuromodulation/: neuromodulator_bus.py
cortex/cognitive_autonomy/planning/: _tests_hierarchical_planner.py  hierarchical_planner.py
cortex/cognitive_autonomy/plasticity/: __init__.py  homeostatic_plasticity.py
cortex/cognitive_autonomy/predictive/: __init__.py  predictive_processor.py
cortex/events/: __init__.py  event_bus.py  resonance.py
cortex/evolution/: __init__.py  code_mutation_lab.py  evolutionary_algorithm.py
cortex/governance/: __init__.py  neural_parliament.py
cortex/homeostasis/: __init__.py  kinetic_flow.py
cortex/identity/: __init__.py  persistent_identity.py
cortex/memory/: real_embeddings.py  semantic_search.py
dashboard/: speace_dashboard.py
digitaldna/: epigenome.yaml
docs/: GROK-SPEACE-V4.2-GAP-ANALYSIS.md  MULTI-REPO-ANALYSIS-2026-04-29.md  SPEACE-M10-BioInspired-Architecture-Review.md
logs/: consciousness_index.jsonl
safeproactive/: PROPOSALS.md
tests/: test_emergence.py
(+8 files in other folders)
