[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "speace"
version = "0.1.0"
description = "SPEACE – SuPer Entità Autonoma Cibernetica Evolutiva"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Roberto De Biase", email = "robertodebiase80@gmail.com" }
]
keywords = ["agi", "autonomous-agent", "cognitive-architecture", "rigene-project", "speace"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.28.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "jsonschema>=4.21.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.33.0", "plotly>=5.20.0"]
dev = ["pytest>=8.0.0", "pytest-timeout>=2.3.0"]
all = ["streamlit>=1.33.0", "plotly>=5.20.0", "pytest>=8.0.0", "pytest-timeout>=2.3.0"]

[project.scripts]
speace = "SPEACE-main:main"

[project.urls]
Homepage      = "https://www.rigeneproject.org"
Repository    = "https://github.com/robertodebiasespeace/speace-prototipo"
Documentation = "https://github.com/robertodebiasespeace/speace-prototipo/blob/main/SPEACE-Engineering-Document-v1.3.md"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "_tests_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-q --tb=short"
timeout = 30

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*", "safeproactive*", "digitaldna*", "scientific_team*"]
exclude = ["*_tests*", "benchmarks*"]
